IDEA Ionic Extra v0.8.2 - fixed auth bg video on iOS

--- a/idea/auth/auth.component.scss
+++ b/idea/auth/auth.component.scss
@@ -26,6 +26,7 @@ IDEAAuthComponent {
     max-width: 350px;
     box-shadow: none;
     background-color: transparent;
+    padding: 20px 15px 10px 15px;
     .theLogo {
       max-width: 200px;
       margin: 0 auto;
